12. Apr 2012 Christoph Thielecke <crissi99@gmx.de>
	- sorting at treeview and fileview reenabled

11. Apr 2012 Christoph Thielecke <crissi99@gmx.de>
	- lang selector fixed
	- select lang at osx fixed
	- changing language on the fly fixed (win32/osx)
	- switching back to english lang fixed (win32/osx)
	- missing label translation at file view on translation change added

10. Apr 2012 Christoph Thielecke <crissi99@gmx.de>
	- dirview ported to qtreewidget
	- lnode ported to qtreewidgetitem
	- hdirview ported to qtreewidget
	- directory ported to qtreewidgetitem
	- qt3 compat includes removed
	- indicator and indention on results listview removed
	- qt3support members rewritten
	- swapped context menu call fixed
	- allow clear result listview if only status text in it

09. Apr 2012 Christoph Thielecke <crissi99@gmx.de>
	- hqlistview ported to qtreewidget
	- hqlistviewitem ported to qtreewidgetitem
	- q3listview at finddialog replaced by qtreewidget
	- q3listviewitem at finddialog replaced by qtreewidgetitem

08. Apr 2012 Christoph Thielecke <crissi99@gmx.de>
	- crash at search for duplicates fixed
	- find for category at finddialog added

05. Apr 2012 Christoph Thielecke <crissi99@gmx.de>
	- font selector at content viewer dialog added
	- display content size correctly on context viewer dialog
	- resize of commwidget content fixed
	- commwidget contents fixes
	- display content size if file has stored content
	- empty file content which sometimes happend fixed
	- show debug output for avi parsing if debug output is enabled
	- draw line before file info if file info is shown

03. Apr 2012 Christoph Thielecke <crissi99@gmx.de>
	- m4v extension for mediainfo scanning added
	- parameters resorted
	- use mainwindow as parent instead guislave (again)
	- size of process dialog fixed if no progressbar is shown
	- resize of commwidget content fixed

02. Apr 2012 Christoph Thielecke <crissi99@gmx.de>
	- commwidget is now a dockable widget (can be undocked)